1.9.9

1.9.8
Frontend:
  * FIX: Fixed incompatibility with PHP 7.2 in Dwoo 3rd party code
  * FIX: Fixed outdated Monitoring portal link in header menu

Automap:
  * FIX: Fixed automaps filter_group when using ndomy/pgsql backend

Installer:
  * FIX: Prevent error when trying to replace old map options and no map exists

1.9.7
Frontend:
  * FIX: Fixed object sort by state regression in 1.9.6

1.9.6
Core:
  * Dynamic map objects can now be sorted by state (Using the new map global
    settings dynmap_sort and dynmap_order)
  * FIX: Improved error handling when trying to use aggregation objects with
         backends that don't support these object types
  * FIX: Fixed "A non-numeric value encountered" when creating new automaps
         without width/height attributes. A workaround would be to add
	 height/width options manually to the map configuration.

1.9.5
Frontend:
  * FIX: Fixed wrong hostname label in service hover menus
  * FIX: Fixed repeated zoom of background image on state updates

Worldmap:
  * FIX: Fixed errors when saving viewport as new map
  * FIX: Fixed rare issue when cloning just added objects
  * FIX: Fixed broken worldmap when using relative objects

Installer:
  * FIX: Fixed displaying wrong backend option "-b" in summary output
  * FIX: Don't display "update backend configuration" confirm in quiet mode
  * FIX: Don't fail updating map configurations when no maps are defined
  * FIX: Don't register demo rotation when using the "-o" option

1.9.4
Core:
  * List of hover menu childs (e.g. services in host object hover) can now be
    left unsorted (keep original sorting). This is useful for aggregation objects
    where the single elements have a defined order and should not be sorted by state
    (Configure this per object by adding the attribute hover_childs_sort=k).

Frontend:
  * On demand automaps: Hostgroup filter in header menu is now a searchable dropdown field 
  * FIX: Fixed moving textbox objects in IE

1.9.3
Core: